--- a/pom.xml
+++ b/pom.xml
@@ -97,13 +97,13 @@
 	    <repository>
 	      <id>nexus</id>
 	      <name>Landmark Technologies Releases Nexus Repository</name>
-	      <url>http:http:/3.82.252.98:8000/repository/boa-releases/</url>
+	      <url>http://34.238.155.70:8000/repository/amazon-bts-releases/</url>
 	    </repository>
 	    
 	    <snapshotRepository>
 	      <id>nexus</id>
 	      <name>Landmark Technologies Snapshot Nexus Repository </name>
-	      <url>http:/3.82.252.98:8000/repository/boa-snapshot/</url>
+	      <url>http://34.238.155.70:8000/repository/amazon-bts-snapshot/</url>
 	    </snapshotRepository>
 	    
 	</distributionManagement>
